    - for REST/etc API calls with authentication for each call is ignored
    - can be disabled per screen transition with @require-session-token=false
  - Password reset now sets a reset password separate from the current
    password that may only be used to change the password; current password
    stays valid for password change or login (if email-require-change=false)
- Entity Features
  - Added field.@create-only attribute, defaults to entity.@create-only
    value, create only now checked at field level on update (only at entity
    level on delete)
  - New concept of explicit master entity definitions with details made up of
    related entities; definitions go in new entity.master element; there are
    new methods in EntityValue, EntityList, and EntityFind to get value Maps
    for the master record plus all details
  - EntityDataLoader has new options for loading CSV files to specify the
    entity or service name and field list through the API instead of in
    records 1 and 2 of the CSV file
  - EntityDataLoader has new defaultValues Map option for default values to
    be used by field/parameter name for entity stores and service calls
- Components may now have a component.xml with a single component element,
  the same component element that is used in the Moqui Conf XML file; if a
  name is specified it will override the directory name; added a depends-on
  element which modifies the component order at runtime
- Component directories (referred to by component-list.component-dir in the
  Moqui Conf XML file) now supports a components.xml file (must use that
  filename) to specify which components to load and in which order
- Localized strings may now contain a double hash (##) to specify context
  where a single word in the default language (ie English) is ambiguous; at
  runtime if no matching LocalizedMessage is found the text before the
  double hash will be used to lookup records or as the default value