@@ -225,6 +225,7 @@ along with this software (see the LICENSE.md file). If not, see
             <xs:attribute name="mutable" type="boolean" default="false"><xs:annotation><xs:documentation>
                 If true related record may be modified through create/update auto-service calls with child records.
                 If false relationship is read-only for aggregated records (using master definition or dependent levels).
+                Defaults to false for type one* relationships, to true for type many (many are generally detail or join entities).
             </xs:documentation></xs:annotation></xs:attribute>
         </xs:complexType>
     </xs:element>
